<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frag2"
        android:layout_width="395dp"
        android:layout_height="284dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="40dp"
            android:text="@string/b_2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/b_1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button0"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:layout_marginStart="228dp"
            android:layout_marginTop="40dp"
            android:text="@string/b_0"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/b_4"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="100dp"
            android:text="@string/b_5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="100dp"
            android:text="@string/b_6"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDot2"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="228dp"
            android:layout_marginTop="100dp"
            android:text="@string/b_help"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:text="@string/b_7"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="160dp"
            android:text="@string/b_8"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="160dp"
            android:text="@string/b_9"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="228dp"
            android:layout_marginTop="160dp"
            android:text="@string/b_dot"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="40dp"
            android:text="@string/b_3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchPremium"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginTop="4dp"
            android:text="@string/premium_textView"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.364"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>