<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/convert_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/textFrom"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:focusable="auto"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textTo"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="124dp"
            android:ems="10"
            android:focusable="auto"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/listTo"
            android:layout_width="66dp"
            android:layout_height="38dp"
            android:layout_marginTop="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toEndOf="@+id/textTo"
            app:layout_constraintTop_toBottomOf="@+id/listFrom" />

        <Spinner
            android:id="@+id/unitList"
            android:layout_width="145dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:entries="@array/unitCategories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTo" />

        <Button
            android:id="@+id/b_Convert"
            android:layout_width="57dp"
            android:layout_height="59dp"
            android:layout_marginTop="1dp"
            android:text="@string/convert_text"
            app:layout_constraintBottom_toTopOf="@+id/textTo"
            app:layout_constraintEnd_toStartOf="@+id/b_Replace"
            app:layout_constraintHorizontal_bias="0.368"
            app:layout_constraintStart_toEndOf="@+id/b_Copy1"
            app:layout_constraintTop_toBottomOf="@+id/textFrom" />

        <Button
            android:id="@+id/b_Replace"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="1dp"
            android:text="@string/replace_text"
            app:layout_constraintBottom_toTopOf="@+id/textTo"
            app:layout_constraintStart_toEndOf="@+id/b_Copy1"
            app:layout_constraintTop_toBottomOf="@+id/textFrom"
            app:layout_constraintVertical_bias="0.428" />

        <Button
            android:id="@+id/b_Copy1"
            android:layout_width="57dp"
            android:layout_height="56dp"
            android:layout_marginTop="1dp"
            android:text="@string/copy_text2"
            app:layout_constraintBottom_toTopOf="@+id/textTo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toEndOf="@+id/b_Copy2"
            app:layout_constraintTop_toBottomOf="@+id/textFrom"
            app:layout_constraintVertical_bias="0.533" />

        <Button
            android:id="@+id/b_Copy2"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginTop="1dp"
            android:text="@string/copy_text1"
            app:layout_constraintBottom_toTopOf="@+id/textTo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFrom"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/listFrom"
            android:layout_width="66dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toEndOf="@+id/textFrom"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>